--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "octodash",
-  "description": "OctoDash is a simple, but beautiful dashboard for Octoprint.",
+  "name": "octodashplus",
+  "description": "OctoDash+ is a simple, but beautiful dashboard for Octoprint.",
   "version": "2.3.1",
   "license": "Apache 2.0",
-  "homepage": "https://github.com/UnchartedBull/OctoDash",
+  "homepage": "https://github.com/meowmeowahr/OctoDash",
   "author": {
-    "name": "Timon Gaebelein",
-    "email": "timon.gaebelein@icloud.com"
+    "name": "Kevin Ahr"
   },
+  "contributors": [
+    {
+      "name": "Timon Gaebelein", 
+      "email": "timon.gaebelein@icloud.com"
+    }
+  ],
   "main": "main.js",
   "browserslist": [
     "chrome > 87"
